# SiffPy

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py  siffpy.py  tox.ini
.github/workflows/: ci.yml
benches/: README.md
benches/python/: benchmark_get_frames.py  benchmark_mask_methods.py  benchmark_open_times.py  local_consts.py
conda-recipe/: conda_build_config.yaml  meta.yaml
corrosiff-python/: Cargo.toml  README.md  __init__.pyi  corrosiffpy.pyi  pyproject.toml  test.py
corrosiff-python/benchmarks/: README.md
corrosiff-python/benchmarks/python/: bench.py  benchmark_get_frames.py
corrosiff-python/compatibility_tests/: conftest.py  test_metadata.py  test_read_flim.py  test_read_frames.py
corrosiff-python/src/: lib.rs  siffio.rs
demo_notebooks/: registration.ipynb
docs/: additional_dependencies.rst  basic_use_notebook.rst  common_issues.rst  conf.py  flim_params.rst  im_params_api  index.rst  installation_guide.rst  modules.rst  multi_pulse_flim_notebook.rst  notebook_documentation.ipynb  registration_info.rst  requirements.txt  siff_to_tiff.rst  siffreader_api.rst  siffreadermodule_api.rst  trace_analysis_api.rst  trace_notebook.rst
docs/_static/corrosiff/: all.html  enum.ClockBase.html  enum.CorrosiffError.html  enum.FramesError.html  enum.TiffMode.html  fn.close_siff_extern.html  fn.get_frames.html  fn.get_frames_extern.html  fn.open_siff.html  fn.open_siff_extern.html  fn.siff_to_tiff.html  fn.test_extern.html  fn.time_axis_epoch.html  fn.time_axis_epoch_both.html  fn.time_axis_experiment.html  index.html  macro.unwrap_tag_as!.html  macro.unwrap_tag_as.html  sidebar-items.js
siffpy/: README.md  __init__.py  siffpy.py
siffpy/core/: README.md  __init__.py  _version.py  siffreader.py
siffpy/core/flim/: __init__.py  exponentials.py  flimparams.py  flimunits.py  fluorophore_inits.py  loss_functions.py  methods.py  multi_flim_params.py  multi_pulse.py  typing.py
siffpy/core/io/: __init__.py  header.py  loaders.py  metadata.py
siffpy/core/timetools/: __init__.py
siffpy/core/utils/: __init__.py  circle_fcns.py  event_stamp.py  imparams.py  registration.py  shame.py  typecheck.py  types.py
siffpy/siffmath/: README.md  __init__.py  fluorescence.py  phase.py
siffpy/siffmath/flim/: README.md  __init__.py  color_correction.py  flimunits.py  lookup_tables.py  phasor.py  traces.py
siffpy/siffmath/fluorescence/: __init__.py  baseline_methods.py  color_correction.py  traces.py
siffpy/siffmath/phase/: README.md  __init__.py  correlate.py  phase_analyses.py  phase_estimates.py  relative_mag_lookup.npz  traces.py
siffpy/siffmath/utils/: __init__.py  timeseries.py  types.py
siffpy/siffplot/: README.md  __init__.py  integratedplotter.py  siffplot.py  siffplotter.py  siffplottheme.yaml  siffvisualizer.py  tracplotter.py
siffpy/siffplot/events/: __init__.py  bar_event_plotter.py
siffpy/siffplot/napari_viewers/: README.md  __init__.py  flim_viewer.py  frame_viewer.py  napari_interface.py  roi_viewer.py
siffpy/siffplot/plotmath/: README.md
siffpy/siffplot/plotters/: README.md  __init__.py  event_plotter.py  flim_plotter.py  fluorescence_plotter.py  histogram_plotter.py  phase_plotter.py  registration_plotter.py
siffpy/siffplot/roi_protocols/: README.md  __init__.py  ellipsoid_body.py  fan_shaped_body.py  generic.py  noduli.py  protocerebral_bridge.py  (+1 more)
siffpy/siffreadermodule/: MANIFEST  README.md  SIFFREADER.code-workspace  __init__.pyi  setup.py
siffpy/sifftrac/: README.md  __init__.py  ballparams.py  logtoplot.py  sifftrac.py  tracplot.py
siffpy/siffutils/: README.md  __init__.py  circle_fcns.py  exp_math.py  flimarray.py  flimparams.py  fluorophore_inits.py  framemetadata.py  imparams.py  matlab_to_python.py  registration.py  slicefcns.py  typecheck.py
siffreadermodule/: README.md  __init__.pyi
siffreadermodule/include/: debug.hpp  ome.hpp  siffmoduledefin.hpp  sifftotiff.hpp
siffreadermodule/src/: framedata.cpp  pyFrameData.cpp  siffio.cpp  siffreader.cpp  siffreadermodule.cpp  sifftotiff.cpp
siffutils/: __init__.py
tests/: __init__.py  dropbox.py  io_tests.py  test_fileread.py  test_flim_methods.py  test_import.py  test_misc.py
(+203 files in other folders)
