[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "siffpy/core/_version.py"

[tool.setuptools.packages.find]
exclude = [
    "temp_analysis_notebooks",
    ".vscode",
]

[project]
name = "siffpy"
dynamic = ["version"]
readme = "README.md"
description = "A package for reading and analyzing .siff data"
license = {text="GPL-3.0-or-later"}
authors = [
    {email = "thornquist@rockefeller.edu"},
    {name = "Stephen Thornquist"},
]

dependencies = [
    "numpy >= 1.15",
    "scipy",
    "h5py",
]