[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "siffpy/core/_version.py"

[tool.setuptools.packages.find]
exclude = [
    "temp_analysis_notebooks*",
    ".vscode",
    "siffreadermodule*",
]

[project]
name = "siffpy"
#version = "0.7.4"
dynamic = ["version"]
readme = "README.md"
description = "A package for reading and analyzing .siff data"
license = {text="GPL-3.0-or-later"}
authors = [
    {email = "thornquist@rockefeller.edu"},
    {name = "Stephen Thornquist"},
]
requires-python = ">=3.9.0"

dependencies = [
    "numpy >= 1.15",
    "scipy",
    "h5py",
    "importlib_resources",
    "corrosiffpy",
    #"corrosiffpy @ git+https://github.com/MaimonLab/corrosiff-python.git"
]

[project.optional-dependencies]
# development dependency groups
test = ['pytest', 'dropbox']
suite2p = ['suite2p @ git+https://github.com/StephenThornquist/suite2p.git']
all = ['siffpy[suite2p, test]']

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]