[build-system]
requires = [
    "maturin",
    "wheel",
    "numpy",
]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "corrosiffpy"

[project]
name = "corrosiffpy"
version = "0.0.1"
readme = "README.md"
description = "A Python wrapper for the `Rust` `corrosiff` library"
license = {text="GPL-3.0-or-later"}
authors = [
    {email = "thornquist@rockefeller.edu"},
    {name = "Stephen Thornquist"},
]
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Rust",
]
dependencies = [
    "numpy >= 1.15",
]

[project.optional-dependencies]
test = [
  "pytest",
]